--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -1,4 +1,9 @@
 /* FOR FIX a-image is not centered */
 img.ant-image-preview-img {
-    display: inline-block;
-  }
+    display: inline-block !important;
+}
+
+/* a-input rounded globally */
+.ant-input-affix-wrapper {
+  border-radius: 20px !important;
+}
